--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,89 @@ dist.jar=${dist.dir}/simtravel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\Users\\User\\Desktop\\lib\\activation-1.1.1.jar
+file.reference.commons-beanutils-1.7.jar=C:\\Users\\User\\Desktop\\lib\\commons-beanutils-1.7.jar
+file.reference.commons-codec-1.12.jar=C:\\Users\\User\\Desktop\\lib\\commons-codec-1.12.jar
+file.reference.commons-collections-2.1.jar=C:\\Users\\User\\Desktop\\lib\\commons-collections-2.1.jar
+file.reference.commons-collections4-4.3.jar=C:\\Users\\User\\Desktop\\lib\\commons-collections4-4.3.jar
+file.reference.commons-compress-1.18.jar=C:\\Users\\User\\Desktop\\lib\\commons-compress-1.18.jar
+file.reference.commons-dbcp-1.2.1.jar=C:\\Users\\User\\Desktop\\lib\\commons-dbcp-1.2.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\User\\Desktop\\lib\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\User\\Desktop\\lib\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.0.2.jar=C:\\Users\\User\\Desktop\\lib\\commons-logging-1.0.2.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\User\\Desktop\\lib\\commons-logging-1.2.jar
+file.reference.commons-logging-api-1.0.2.jar=C:\\Users\\User\\Desktop\\lib\\commons-logging-api-1.0.2.jar
+file.reference.commons-math-1.0.jar=C:\\Users\\User\\Desktop\\lib\\commons-math-1.0.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\User\\Desktop\\lib\\commons-math3-3.6.1.jar
+file.reference.commons-pool-1.3.jar=C:\\Users\\User\\Desktop\\lib\\commons-pool-1.3.jar
+file.reference.commons-vfs-1.0.jar=C:\\Users\\User\\Desktop\\lib\\commons-vfs-1.0.jar
+file.reference.curvesapi-1.06.jar=C:\\Users\\User\\Desktop\\lib\\curvesapi-1.06.jar
+file.reference.iReport.jar=C:\\Users\\User\\Desktop\\lib\\iReport.jar
+file.reference.itext-1.3.1.jar=C:\\Users\\User\\Desktop\\lib\\itext-1.3.1.jar
+file.reference.jasperreports-2.0.5.jar=C:\\Users\\User\\Desktop\\lib\\jasperreports-2.0.5.jar
+file.reference.jasypt-1.9.0.jar=C:\\Users\\User\\Desktop\\lib\\jasypt-1.9.0.jar
+file.reference.javax.mail.jar=C:\\Users\\User\\Desktop\\lib\\javax.mail.jar
+file.reference.jaxb-api-2.3.0.jar=C:\\Users\\User\\Desktop\\lib\\jaxb-api-2.3.0.jar
+file.reference.jaxb-core-2.3.0.1.jar=C:\\Users\\User\\Desktop\\lib\\jaxb-core-2.3.0.1.jar
+file.reference.jaxb-impl-2.3.0.1.jar=C:\\Users\\User\\Desktop\\lib\\jaxb-impl-2.3.0.1.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\User\\Desktop\\lib\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\User\\Desktop\\lib\\jcommon-1.0.23.jar
+file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\User\\Desktop\\lib\\jdt-compiler-3.1.1.jar
+file.reference.jfreechart-1.0.13.jar=C:\\Users\\User\\Desktop\\lib\\jfreechart-1.0.13.jar
+file.reference.jfreechart-1.0.19.zip=C:\\Users\\User\\Downloads\\jfreechart-1.0.19.zip
+file.reference.json-simple-1.1.1.jar=C:\\Users\\User\\Desktop\\lib\\json-simple-1.1.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\User\\Desktop\\lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.poi-4.1.0.jar=C:\\Users\\User\\Desktop\\lib\\poi-4.1.0.jar
+file.reference.poi-excelant-4.1.0.jar=C:\\Users\\User\\Desktop\\lib\\poi-excelant-4.1.0.jar
+file.reference.poi-ooxml-4.1.0.jar=C:\\Users\\User\\Desktop\\lib\\poi-ooxml-4.1.0.jar
+file.reference.poi-ooxml-schemas-4.1.0.jar=C:\\Users\\User\\Desktop\\lib\\poi-ooxml-schemas-4.1.0.jar
+file.reference.poi-scratchpad-4.1.0.jar=C:\\Users\\User\\Desktop\\lib\\poi-scratchpad-4.1.0.jar
+file.reference.xmlbeans-3.1.0.jar=C:\\Users\\User\\Desktop\\lib\\xmlbeans-3.1.0.jar
+file.reference.zxing-core-3.4.0.jar=C:\\Users\\User\\Desktop\\lib\\zxing-core-3.4.0.jar
+file.reference.zxing-javase-3.4.0.jar=C:\\Users\\User\\Desktop\\lib\\zxing-javase-3.4.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-beanutils-1.7.jar}:\
+    ${file.reference.commons-codec-1.12.jar}:\
+    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.commons-collections4-4.3.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.commons-dbcp-1.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.0.2.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-logging-api-1.0.2.jar}:\
+    ${file.reference.commons-math-1.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.commons-pool-1.3.jar}:\
+    ${file.reference.commons-vfs-1.0.jar}:\
+    ${file.reference.curvesapi-1.06.jar}:\
+    ${file.reference.iReport.jar}:\
+    ${file.reference.itext-1.3.1.jar}:\
+    ${file.reference.jasperreports-2.0.5.jar}:\
+    ${file.reference.jasypt-1.9.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jaxb-api-2.3.0.jar}:\
+    ${file.reference.jaxb-core-2.3.0.1.jar}:\
+    ${file.reference.jaxb-impl-2.3.0.1.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jdt-compiler-3.1.1.jar}:\
+    ${file.reference.jfreechart-1.0.13.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.poi-4.1.0.jar}:\
+    ${file.reference.poi-excelant-4.1.0.jar}:\
+    ${file.reference.poi-ooxml-4.1.0.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar}:\
+    ${file.reference.poi-scratchpad-4.1.0.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.zxing-core-3.4.0.jar}:\
+    ${file.reference.zxing-javase-3.4.0.jar}:\
+    ${file.reference.jfreechart-1.0.19.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
