--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.1.jar=C:\\Users\\User\\Desktop\\lib\\activation-1.1.1.jar
+file.reference.barbecue-2.0-dev.jar=C:\\Users\\User\\Desktop\\lib\\barbecue-2.0-dev.jar
 file.reference.commons-beanutils-1.7.jar=C:\\Users\\User\\Desktop\\lib\\commons-beanutils-1.7.jar
 file.reference.commons-codec-1.12.jar=C:\\Users\\User\\Desktop\\lib\\commons-codec-1.12.jar
 file.reference.commons-collections-2.1.jar=C:\\Users\\User\\Desktop\\lib\\commons-collections-2.1.jar
@@ -111,7 +112,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.1.0.jar}:\
     ${file.reference.zxing-core-3.4.0.jar}:\
     ${file.reference.zxing-javase-3.4.0.jar}:\
-    ${file.reference.jfreechart-1.0.19.zip}
+    ${file.reference.jfreechart-1.0.19.zip}:\
+    ${file.reference.barbecue-2.0-dev.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
